refactor: Add typeMap ordenDetail